--- a/manifest.json
+++ b/manifest.json
@@ -12,12 +12,15 @@
         "128": "images/icon-128.png"
     }, 
     "background": {
-        "service_worker": "background.js",
+        "service_worker": "background.js", 
         "type": "module"
     }, 
     "permissions":[
         "storage", 
         "alarms", 
         "notifications"
+    ],
+    "host_permissions": [
+        "https://leetcode.com/graphql/"
     ]
 }
