open POTD on startup and update

--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,8 @@
     "permissions":[
         "storage", 
         "alarms", 
-        "notifications"
+        "notifications", 
+        "tabs"
     ],
     "host_permissions": [
         "https://leetcode.com/graphql/"
